# base_simulation

./: README.md  frames_2025-03-24_17.27.20.gv  frames_2025-03-27_17.56.53.gv  global_map.pgm  global_map.yaml  package.xml
config/: gaz_ros2_ctl_use_sim.yaml  gz_bridge.yaml  mapper_params.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arm_state/lib/arm_state/: ard_pubser  client  com  save  server  start  stop
install/arm_state/share/arm_state/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/arm_state/share/arm_state/cmake/: arm_stateConfig.cmake
install/localizer_server/lib/localizer_server/: global_localization
install/localizer_server/share/localizer_server/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/localizer_server/share/localizer_server/cmake/: localizer_serverConfig.cmake
install/robot_description/share/robot_description/: package.sh
install/robot_description/share/robot_description/config/: mapper_params.yaml
install/robot_description/share/robot_description/launch/: launch_sim2.launch.py  nav2_bringup.launch.py  nav2_with_slam.launch.py  ready.py
install/robot_description/share/robot_description/rviz/: urdf_config.rviz
install/robot_description/share/robot_description/urdf/: camera.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
launch/: launch_sim.launch.py  map_building.launch.py  upload.launch.py
log/: latest_build
src/arm_state/: CMakeLists.txt  package.xml
src/arm_state/src/: robot_all.cpp  robot_move_client.cpp  robot_move_server.cpp  robot_state_pub.cpp  robot_state_save_client.cpp  robot_state_start_client.cpp  robot_state_stop.cpp  robot_state_sub.cpp
src/localizer_server/: CMakeLists.txt
src/localizer_server/src/: global_localization.cpp  init_robot.cpp
src/robot_description/: CMakeLists.txt
src/robot_description/config/: amcl.yaml  gz_bridge.yaml  mapper_params.yaml  navigation.yaml
src/robot_description/launch/: display.launch.py  launch_sim.launch.py  localization.launch.py
src/robot_description/rviz/: urdf_config.rviz
src/robot_description/urdf/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot_core.xacro
src/robot_description/worlds/: maze2.sdf
urdf/: arm.urdf  camera.xacro  lidar.xacro
worlds/: maze2.sdf  obstacles.world
